# yo5uke.github.io

./: .Rprofile  .bash_profile  .dvcignore  .editorconfig  .gitignore  .nojekyll  .renvignore  404.html  404.qmd  CLAUDE.html  CNAME  Dockerfile  README.md  SETUP.md  _brand.yml  _language.yml  _quarto.yml  about.html  about.qmd  custom.scss  data.dvc  docker-compose.yml  gis_in_r.html  gis_in_r.qmd  index-listing.json  index.html  index.qmd  listings.json  metro_theme.scss  pyproject.toml  references.bib  requirements.txt  robots.txt  search.json  sitemap.xml  styles.scss  test-linkcard.html  theme-dark.scss  tips.qmd  yo5uke.github.io.Rproj
.config/.rstudio/: rstudio-prefs.json
.devcontainer/: .devcontainer.json  Dockerfile  devcontainer.json
.dvc/: config
.github/instructions/: quarto-publish.instructions.md
.github/workflows/: publish.yml
.rstudio/: rstudio-prefs.json
_extensions/linkcard/: README.md  _extension.yml  fetch-metadata.lua  linkcard.lua
app/: app.html  app.qmd  app.yml  index.html  index.qmd
assets/csl/: chicago-author-date.csl
assets/html/: custom.scss
blog/: _metadata.yml  index.html  index.qmd
blog/240708_positron/: index.html  index.qmd
blog/240723_typst/: index.html  index.qmd
docs/: 404.html  about.html  gis_in_r.html  index.html  listings.json  search.json  sitemap.xml  tips.html  tips.xml
docs/blog/: index.html
figure/: create_logo.R
pages/: about-listing.json  about.html  about.qmd  research.ejs  research.yml
tips/: _metadata.yml  carousel.yml  index.html  index.qmd  index.xml  tips.qmd
translations/: ja.yaml
(+845 files in other folders)
