[project]
name = "yo5uke-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars>=1.37",
    "pandas>=2.2",
    "numpy>=2.2",
    "matplotlib>=3.10",
    "jupyter>=1.1",
    "dvc[gdrive]>=3.58",
    "selenium>=4.35",
    "flask>=3.1",
    "flask-cors>=5.0",
]
